--- a/templates/result.html
+++ b/templates/result.html
@@ -38,6 +38,11 @@
                     <span class="contact100-form-title">
                         eValuer
                     </span>
+                    <div class="wrap-input100 validate-input bg1 contact100-form-answer">
+                        <pre>
+                            <p><br>Based on These Factors the Price of the Car Would be around : <b>{{ prediction_text }}</b> in Lakh ₹.</p> </pre>
+                        
+                    </div>
                     <div class="wrap-input100 validate-input bg1 rs1-wrap-input100">
                         <span class="label-input100">Year</span>
                         <span class="input100">
@@ -124,9 +129,7 @@
                         </span>
                     </div>
                     <div class="wrap-input100 validate-input bg1 contact100-form-answer">
-                        <pre>
-                            <br>Based on Above Factors the Price of the Car Would be around : {{ prediction_text }} in Lakh ₹ </pre>
-                        <br><br><a href="/"> <button class="contact100-form-btn" id="home" type="button">
+                    <a href="/"> <button class="contact100-form-btn" id="home" type="button">
 
                                 <span>
                                     Home
