--- a/templates/result.html
+++ b/templates/result.html
@@ -40,7 +40,7 @@
                     </span>
                     <div class="wrap-input100 validate-input bg1 contact100-form-answer">
                         <pre>
-                            <p><br>Based on These Factors the Price of the Car Would be around : <b>{{ prediction_text }}</b> in Lakh ₹.</p> </pre>
+                            <p><br>Based on These Factors the Price of the Car Would be around : <b>{{ prediction_text }}</b> Lakh ₹.</p> </pre>
                         
                     </div>
                     <div class="wrap-input100 validate-input bg1 rs1-wrap-input100">
