--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
 						<span class="label-input100">Brand </span>
 						<div>
 							<select class="js-select2" id="brand" name="brand">
-								<option>Please chooses</option>
+								<option>Please select a Brand</option>
 								<option value="BMW">BMW</option>
 								<option value="Chevrolet">Chevrolet</option>
 								<option value="Dastun">Dastun</option>
@@ -139,7 +139,7 @@
 						<span class="label-input100">Previous No. of Owners</span>
 						<div>
 							<select class="js-select6" name="Owner" id="Owner">
-								<option>Please chooses</option>
+								<option>Select Previous Owners</option>
 								<option value="1">1</option>
 								<option value="2">2</option>
 								<option value="3">3 or more</option>
