--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
 						<span class="label-input100">Brand </span>
 						<div>
 							<select class="js-select2" id="brand" name="brand">
-								<option>Please select a Brand</option>
+								<option selected="true" disabled="disabled">Please select a Brand :-</option>  
 								<option value="BMW">BMW</option>
 								<option value="Chevrolet">Chevrolet</option>
 								<option value="Dastun">Dastun</option>
